Incomplete - task New Action class (adapted from Swing) to replace ActionDescription